--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-V508KEL\\SQL2012;Database=skinet.db;User Id=sa;Password=praman1947;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data source=skinet.db"
   }
 }
